redid some things

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
-	background-color: #e3ffff;
-}
-.useless {
-	color: #8f8f8f;
+	color:black;
+	background-color: #c3ffaf;
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-size: 1.3vw;
 }
