--- a/other/clicker.css
+++ b/other/clicker.css
@@ -1,6 +1,6 @@
 body {
 	color:black;
-	background-color: #ffffff;
+	background-color: rgb(255, 255, 255);
 	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-size: 1.3vw;
 }
